added icons to folder component

--- a/components/folder/Folder.module.css
+++ b/components/folder/Folder.module.css
@@ -1,9 +1,25 @@
+.folder {
+    user-select: none;
+}
+
 .title {
     font-size: 14px;
     color: #5E6366;
 }
 
+.container {
+    display: flex;
+}
+
 .children {
     padding-left: 18px;
-    margin-top: 15px;
+    margin-top: 12px;
+}
+
+.folder2Icon {
+    margin-right: 10px;
+}
+
+.toggleIcon {
+    margin-right: 6px;
 }
