--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,8 +1,6 @@
 .container {
+    margin: 0 auto;
+    width: 400px;
     padding-top: 100px;
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
 }
 
