--- a/components/folder/Folder.module.css
+++ b/components/folder/Folder.module.css
@@ -13,6 +13,7 @@
 
 .container {
     display: flex;
+    align-items: center;
 }
 
 .children {
@@ -25,5 +26,6 @@
 }
 
 .toggleIcon {
+    margin-top: -6px;
     margin-right: 6px;
 }
