--- a/components/element/Element.module.css
+++ b/components/element/Element.module.css
@@ -2,6 +2,10 @@
     font-size: 14px;
 }
 
+.value {
+    color: #919699;
+}
+
 .element {
     display: flex;
 }
@@ -9,6 +13,7 @@
 .content {
     display: flex;
     justify-content: space-between;
+    width: 100%;
 }
 
 .icon {
