--- a/components/element/Element.module.css
+++ b/components/element/Element.module.css
@@ -7,11 +7,12 @@
 }
 
 .element {
-    display: flex;
+    display: inline-flex;
+    min-width: 168px;
 }
 
 .content {
-    display: flex;
+    display: inline-flex;
     justify-content: space-between;
     width: 100%;
 }
