--- a/components/folder/Folder.module.css
+++ b/components/folder/Folder.module.css
@@ -1,7 +1,6 @@
 .folder {
     user-select: none;
-    width: 100%;
-    display: flex;
+    display: inline-flex;
 }
 
 .clickable {
@@ -15,7 +14,7 @@
 }
 
 .container {
-    display: flex;
+    display: inline-flex;
 }
 
 .children {
