--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,6 +1,15 @@
 .container {
-    padding-top: 100px;
+    padding-top: 50px;
     padding-left: 300px;
+}
+
+.tree {
+    display: inline-flex;
+    flex-direction: column;
+}
+
+.rightBlock {
+    padding-top: 80px;
 }
 
 .line {
@@ -10,6 +19,7 @@
 }
 
 .subCaption {
+    display: inline-block;
     color: #5E6366;
     font-size: 14px;
     padding: 12px 16px;
